secção Our Features feita

--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -6,8 +6,16 @@
        margin-right: -65px;
    }
 
+   &--gutters-large {
+       margin-right: -100px;
+   }
+
     &--gutters > div {
         padding-right: 65px;
+    }
+
+    &--gutters-large {
+        padding-right: 100px;
     }
 
     @mixin atMedium {
@@ -17,7 +25,13 @@
         }
 
         &__medium-4--larger {
+            float: left;
             width:37%;
+        }
+
+        &__medium-6 {
+            float: left;
+            width: 50%;
         }
     
         &__medium-8 {
