--- a/app/assets/styles/modules/_generic-content-container.css
+++ b/app/assets/styles/modules/_generic-content-container.css
@@ -1,7 +1,14 @@
 .generic-content-container {
     p {
+        font-weight: 300;
         line-height: 1.65;
         font-size: 0.875rem;
+        margin: 0 0 1.8rem 0;
+        text-align: center;
+
+        @mixin atSmall {
+            text-align: left;
+        }
     }
 
     p a {
