--- a/app/assets/styles/modules/_section-title.css
+++ b/app/assets/styles/modules/_section-title.css
@@ -13,6 +13,10 @@
         font-weight:500;
     }
 
+    &--blue {
+        color: $mainBlue;
+    }
+
     &__icon {
         display: block;
         margin-left:auto;
@@ -21,6 +25,8 @@
     }
 
     @mixin atSmall {
+        position: relative;
+        top: 8px;
         display: inline-block;
         margin-right: 0.5rem;
         margin-left: 0;
