--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -1,17 +1,19 @@
+.transformed {
+    transform: scale(.57);
+}
+
 .site-header {
     padding: 10px 0;
     position: absolute;
     z-index: 2;
     width: 100%;
-    transition: background-color .3s ease-out;
-
-    &--is-expanded {
-        background-color: rgba($mainBlue, .55);
-    }
+    transition: all .3s ease-out;
+    position: fixed;
+    background-color: rgba(23, 51, 72, .85);
 
     @mixin atMedium {
-        position: fixed;
-        background-color: rgba($mainBlue, .3);
+        
+        
 
         &--dark {
             background-color: rgba(23, 51, 72, .85);
@@ -35,6 +37,8 @@
         transform-origin: 50% 0%;
         background-color: $mainBlue;
         padding: 25px 36px;
+
+      
 
         @mixin atMedium {
             left: auto;
