--- a/gulp/templates/sprite.css
+++ b/gulp/templates/sprite.css
@@ -4,7 +4,7 @@ automatically by gulp. Instead edit gulp/templates/sprite */
 {{#shapes}}
     {{#first}}
     .icon {
-        background-image: url('/assets/images/sprites/{{{sprite}}}');
+        background-image: url('../../assets/images/sprites/{{{sprite}}}');
     }
     {{/first}}
 .icon--{{base}} {
